cc_binary(
    visibility = ["//visibility:public"],
    name = "ip",
    srcs = [
        "ip/serve.cc",
    ],
    copts = [
        "-std=c++20",
        "-Werror",
        "-Wall",
        "-fsanitize=undefined,address,leak",
        "-fno-omit-frame-pointer",
    ],
    linkopts = [
        "-fsanitize=undefined,address,leak",
    ],
    deps = [
        "@fmt//:fmt",
        "@gflags//:gflags",
        "@glog//:glog",
    ],
)
